// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Notifications > should open and close transaction details modal 1`] = `
<div>
  <div>
    <div
      aria-controls=":rf:"
      aria-expanded="true"
      aria-haspopup="dialog"
      data-testid="dropdown__toggle"
    >
      <div
        class="group css-c93wvv"
      >
        <button
          class="p-3 relative items-center inline-flex justify-center font-semibold leading-tight text-center transition-colors-shadow duration-100 ease-linear outline-none focus:outline-none focus:ring-2 focus:ring-theme-primary-400 disabled:cursor-not-allowed rounded border-none"
          data-testid="NavigationBar__buttons--notifications"
          type="button"
        >
          <div
            class="flex items-center space-x-2"
          >
            <div
              class="p-1 css-1i4b0eq"
              height="20"
              width="20"
            >
              <svg
                id="bell"
                viewBox="0 0 20 20"
                x="0"
                xml:space="preserve"
                xmlns="http://www.w3.org/2000/svg"
                y="0"
              >
                <g
                  fill="none"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                >
                  <path
                    d="M8.4 17.8c.3.9 1.2 1.4 2.1 1.1.5-.2 1-.6 1.1-1.1M10 2.8V1M10 2.8c3.3 0 6 2.7 6 6h0c0 5.6 1.2 6.6 1.2 6.6H2.8S4 13.9 4 8.8c0-3.3 2.7-6 6-6z"
                  />
                </g>
              </svg>
            </div>
          </div>
        </button>
      </div>
    </div>
    <div
      class="overflow-overlay fixed inset-0 z-50 flex w-full overflow-y-hidden bg-theme-secondary-900-rgba bg-opacity-60 dark:bg-black-rgba dark:bg-opacity-80 md:py-20"
      data-testid="Modal__overlay"
    >
      <div
        class="css-1jzz0qm"
        tabindex="-1"
      >
        <div
          class="relative flex min-h-full flex-col overflow-hidden bg-theme-background shadow-2xl sm:mb-0 md:h-auto md:rounded-xl px-6 pt-4 md:p-8 pb-24"
          data-testid="Modal__inner"
        >
          <div
            class="absolute right-0 top-0 z-10 mr-6 mt-4 rounded bg-theme-primary-100 transition-all duration-100 ease-linear hover:bg-theme-primary-300 dark:bg-theme-secondary-800 dark:text-theme-secondary-600 dark:hover:bg-theme-secondary-700 dark:hover:text-theme-secondary-400 md:mr-8 md:mt-8"
          >
            <button
              class="p-3 relative items-center inline-flex justify-center font-semibold leading-tight text-center transition-colors-shadow duration-100 ease-linear outline-none focus:outline-none focus:ring-2 focus:ring-theme-primary-400 disabled:cursor-not-allowed rounded border-none h-8 w-8"
              data-testid="Modal__close-button"
              type="button"
            >
              <div
                class="flex items-center space-x-2"
              >
                <div
                  class="css-v0ob3f"
                  height="16"
                  width="16"
                >
                  <svg
                    id="cross"
                    viewBox="0 0 20 20"
                    x="0"
                    xml:space="preserve"
                    xmlns="http://www.w3.org/2000/svg"
                    y="0"
                  >
                    <g
                      fill="none"
                      stroke="currentColor"
                      stroke-linecap="round"
                      stroke-linejoin="round"
                      stroke-width="2"
                    >
                      <path
                        d="M.954 18.981l18-18M18.954 18.981l-18-18"
                      />
                    </g>
                  </svg>
                </div>
              </div>
            </button>
          </div>
          <div
            class="relative flex flex-1 flex-col space-y-1.5"
          >
            <h2
              class="mb-0 max-w-[calc(100%_-_32px)] text-lg font-bold md:pt-0 md:text-2xl"
            >
              Transaction Details
            </h2>
            <div
              class="flex flex-1 flex-col"
            >
              <div
                class="condensed"
              >
                <div
                  class="mt-4"
                >
                  <div
                    class="flex-row items-center sm:flex sm:rounded-lg sm:border sm:border-theme-secondary-300 sm:dark:border-theme-secondary-800"
                    data-testid="TransactionId"
                  >
                    <div
                      class="mb-2 whitespace-nowrap font-semibold text-theme-secondary-700 dark:text-theme-secondary-500 sm:mb-0 sm:h-full sm:rounded-l-lg sm:bg-theme-secondary-200 sm:px-4 sm:py-3 sm:dark:bg-black"
                    >
                      Transaction ID
                    </div>
                    <div
                      class="grow font-semibold sm:px-4"
                    >
                      <div
                        class="text-theme-secondary-900 dark:text-theme-text"
                      >
                        127d3...b10cd
                      </div>
                    </div>
                    <div
                      class="mt-4 flex items-center space-x-2 sm:mr-4 sm:mt-0"
                    >
                      <button
                        class="ring-focus relative focus:outline-none p-2 relative items-center inline-flex justify-center font-semibold leading-tight text-center transition-colors-shadow duration-100 ease-linear outline-none focus:outline-none focus:ring-2 focus:ring-theme-primary-400 disabled:cursor-not-allowed rounded dark:bg-theme-secondary-800 dark:text-theme-secondary-200
					bg-theme-primary-100 text-theme-primary-600
					hover:bg-theme-primary-700 hover:text-white
					dark:hover:bg-theme-primary-700
				"
                        data-ring-focus-margin="-m-1"
                        data-testid="clipboard-icon__wrapper"
                        type="button"
                      >
                        <div
                          class="css-v0ob3f"
                          height="16"
                          width="16"
                        >
                          <svg
                            id="copy"
                            viewBox="0 0 20 20"
                            x="0"
                            xml:space="preserve"
                            xmlns="http://www.w3.org/2000/svg"
                            y="0"
                          >
                            <g
                              fill="none"
                              stroke="currentColor"
                              stroke-linecap="round"
                              stroke-linejoin="round"
                              stroke-width="2"
                            >
                              <path
                                d="M7 17.765C7 18.485 7.496 19 8.09 19h-.099 8.82c.694 0 1.189-.618 1.189-1.235V6.235C18 5.515 17.405 5 16.81 5h0-6.242c-.298 0-.595.103-.892.309l-2.379 2.47C7 8.09 7 8.397 7 8.706v9.059z"
                              />
                              <path
                                d="M13 5V2.235C13 1.515 12.405 1 11.81 1h0-6.242c-.298 0-.595.103-.892.309l-2.379 2.47C2 4.09 2 4.397 2 4.706v9.059C2 14.485 2.496 15 3.09 15h-.099H7"
                              />
                            </g>
                          </svg>
                        </div>
                        <span
                          class="sm:hidden"
                        >
                          Copy
                        </span>
                      </button>
                      <button
                        class="relative items-center inline-flex justify-center font-semibold leading-tight text-center transition-colors-shadow duration-100 ease-linear outline-none focus:outline-none focus:ring-2 focus:ring-theme-primary-400 disabled:cursor-not-allowed rounded dark:text-theme-secondary-200 text-theme-primary-600 hover:bg-theme-primary-700 hover:text-white dark:hover:bg-theme-primary-700 border border-theme-secondary-300 bg-transparent p-2 hover:border-transparent dark:border-transparent dark:bg-theme-secondary-800"
                        data-testid="explorer-link"
                        type="button"
                      >
                        <div
                          class="flex items-center space-x-2"
                        >
                          <div
                            class="css-v0ob3f"
                            height="16"
                            width="16"
                          >
                            <svg
                              id="arrow-external"
                              viewBox="0 0 20 20"
                              x="0"
                              xml:space="preserve"
                              xmlns="http://www.w3.org/2000/svg"
                              y="0"
                            >
                              <path
                                d="M18.999 6.43V1h-5.43m5.43 0L7.033 12.966M9.749 4h-7.5c-.625 0-1.25.625-1.25 1.25v12.5c0 .625.625 1.25 1.25 1.25h12.5c.625 0 1.25-.625 1.25-1.25v-7.5"
                                fill="none"
                                stroke="currentColor"
                                stroke-linecap="round"
                                stroke-linejoin="round"
                                stroke-width="2"
                              />
                            </svg>
                          </div>
                        </div>
                      </button>
                    </div>
                  </div>
                </div>
                <div
                  class="mt-6 space-y-4"
                >
                  <div
                    class="group flex"
                  >
                    <div
                      class="hidden sm:ml-3 sm:flex"
                    >
                      <div
                        class="min-w-9 flex-row pr-3"
                      >
                        <div
                          class="-mt-2 h-6 w-full rounded-bl-xl border-b-2 border-l-2 border-theme-secondary-300 dark:border-theme-secondary-800"
                        />
                        <div
                          class="h-[105%] w-full border-l-2 border-theme-secondary-300 group-last:hidden dark:border-theme-secondary-800"
                        />
                      </div>
                    </div>
                    <div
                      class="w-full sm:flex-row"
                    >
                      <div
                        data-testid="DetailWrapper"
                      >
                        <div
                          class="border-l-2 border-x-theme-primary-400 bg-theme-secondary-100 px-3 py-2 dark:bg-black sm:border-none sm:bg-transparent sm:p-0 dark:sm:bg-transparent"
                          data-testid="DetailLabel"
                        >
                          <div
                            class="no-ligatures text-md min-w-24 font-semibold leading-5 text-theme-secondary-700 dark:text-theme-secondary-500"
                            data-testid="DetailLabelText"
                          >
                            Addressing
                          </div>
                        </div>
                        <div
                          class="w-full break-words rounded-lg border-theme-secondary-300 p-3 dark:border-theme-secondary-800 sm:border sm:px-6 sm:py-5 [.condensed_&]:sm:py-4 mt-0 sm:mt-2"
                        >
                          <div
                            class="flex items-center justify-between space-x-2 sm:justify-start sm:space-x-0"
                          >
                            <div
                              class="no-ligatures w-20 flex-shrink-0 text-sm font-semibold leading-[17px] text-theme-secondary-700 dark:text-theme-secondary-500 sm:text-base sm:leading-5 min-w-24"
                            >
                              From
                            </div>
                            <div
                              class="flex overflow-hidden whitespace-nowrap items-center space-x-2 w-full justify-end sm:justify-start"
                            >
                              <span
                                class="font-semibold text-base text-theme-text text-sm leading-[17px] sm:leading-5 sm:text-base"
                                data-testid="Address__alias"
                              >
                                <span
                                  class="no-ligatures css-9nx3be"
                                  data-testid="TruncateEnd"
                                >
                                  ARK Wallet 2
                                </span>
                              </span>
                              <div
                                class="relative grow leading-[17px] sm:leading-5 text-left"
                              >
                                <span
                                  class="no-ligatures min-w-0 overflow-hidden text-sm leading-[17px] sm:leading-5 sm:text-base w-full w-3/4 text-theme-secondary-500 dark:text-theme-secondary-700  font-semibold text-base absolute w-full"
                                  data-testid="Address__address"
                                >
                                  D5sRKWckH4rE1hQ9eeMeHAepgyC3cvJtwb
                                </span>
                                <span>
                                   
                                </span>
                              </div>
                              <button
                                class="ring-focus relative focus:outline-none"
                                data-ring-focus-margin="-m-1"
                                data-testid="clipboard-icon__wrapper"
                                type="button"
                              >
                                <div
                                  class="text-theme-primary-400 dark:text-theme-secondary-700 dark:hover:text-theme-secondary-500 css-v0ob3f"
                                  height="16"
                                  width="16"
                                >
                                  <svg
                                    id="copy"
                                    viewBox="0 0 20 20"
                                    x="0"
                                    xml:space="preserve"
                                    xmlns="http://www.w3.org/2000/svg"
                                    y="0"
                                  >
                                    <g
                                      fill="none"
                                      stroke="currentColor"
                                      stroke-linecap="round"
                                      stroke-linejoin="round"
                                      stroke-width="2"
                                    >
                                      <path
                                        d="M7 17.765C7 18.485 7.496 19 8.09 19h-.099 8.82c.694 0 1.189-.618 1.189-1.235V6.235C18 5.515 17.405 5 16.81 5h0-6.242c-.298 0-.595.103-.892.309l-2.379 2.47C7 8.09 7 8.397 7 8.706v9.059z"
                                      />
                                      <path
                                        d="M13 5V2.235C13 1.515 12.405 1 11.81 1h0-6.242c-.298 0-.595.103-.892.309l-2.379 2.47C2 4.09 2 4.397 2 4.706v9.059C2 14.485 2.496 15 3.09 15h-.099H7"
                                      />
                                    </g>
                                  </svg>
                                </div>
                              </button>
                            </div>
                          </div>
                          <div
                            class="hidden h-8 w-full items-center sm:flex [.condensed_&]:h-3 [.condensed_&]:leading-3"
                          >
                            <div
                              class="w-full [.condensed_&]:hidden"
                            >
                              <div
                                class="border-theme-secondary-300 dark:border-theme-secondary-800 css-ppmbkz"
                                type="horizontal"
                              />
                            </div>
                          </div>
                          <div
                            class="mt-3 flex w-full items-center justify-between space-x-2 sm:mt-0 sm:justify-start sm:space-x-0"
                          >
                            <div
                              class="no-ligatures w-20 flex-shrink-0 text-sm font-semibold leading-[17px] text-theme-secondary-700 dark:text-theme-secondary-500 sm:text-base sm:leading-5 min-w-24"
                            >
                              To
                            </div>
                            <div
                              class="flex overflow-hidden whitespace-nowrap items-center space-x-2 w-full justify-end sm:justify-start"
                            >
                              <span
                                class="font-semibold text-base text-theme-text text-sm leading-[17px] sm:leading-5 sm:text-base"
                                data-testid="Address__alias"
                              >
                                <span
                                  class="no-ligatures css-9nx3be"
                                  data-testid="TruncateEnd"
                                >
                                  ARK Wallet 2
                                </span>
                              </span>
                              <div
                                class="relative grow leading-[17px] sm:leading-5 text-left"
                              >
                                <span
                                  class="no-ligatures min-w-0 overflow-hidden text-sm leading-[17px] sm:leading-5 sm:text-base text-theme-secondary-500 dark:text-theme-secondary-700  font-semibold text-base absolute w-full"
                                  data-testid="Address__address"
                                >
                                  D5sRKWckH4rE1hQ9eeMeHAepgyC3cvJtwb
                                </span>
                                <span>
                                   
                                </span>
                              </div>
                              <button
                                class="ring-focus relative focus:outline-none"
                                data-ring-focus-margin="-m-1"
                                data-testid="clipboard-icon__wrapper"
                                type="button"
                              >
                                <div
                                  class="text-theme-primary-400 dark:text-theme-secondary-700 dark:hover:text-theme-secondary-500 css-v0ob3f"
                                  height="16"
                                  width="16"
                                >
                                  <svg
                                    id="copy"
                                    viewBox="0 0 20 20"
                                    x="0"
                                    xml:space="preserve"
                                    xmlns="http://www.w3.org/2000/svg"
                                    y="0"
                                  >
                                    <g
                                      fill="none"
                                      stroke="currentColor"
                                      stroke-linecap="round"
                                      stroke-linejoin="round"
                                      stroke-width="2"
                                    >
                                      <path
                                        d="M7 17.765C7 18.485 7.496 19 8.09 19h-.099 8.82c.694 0 1.189-.618 1.189-1.235V6.235C18 5.515 17.405 5 16.81 5h0-6.242c-.298 0-.595.103-.892.309l-2.379 2.47C7 8.09 7 8.397 7 8.706v9.059z"
                                      />
                                      <path
                                        d="M13 5V2.235C13 1.515 12.405 1 11.81 1h0-6.242c-.298 0-.595.103-.892.309l-2.379 2.47C2 4.09 2 4.397 2 4.706v9.059C2 14.485 2.496 15 3.09 15h-.099H7"
                                      />
                                    </g>
                                  </svg>
                                </div>
                              </button>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                  <div
                    class="group flex"
                  >
                    <div
                      class="hidden sm:ml-3 sm:flex"
                    >
                      <div
                        class="min-w-9 flex-row pr-3"
                      >
                        <div
                          class="-mt-2 h-6 w-full rounded-bl-xl border-b-2 border-l-2 border-theme-secondary-300 dark:border-theme-secondary-800"
                        />
                        <div
                          class="h-[105%] w-full border-l-2 border-theme-secondary-300 group-last:hidden dark:border-theme-secondary-800"
                        />
                      </div>
                    </div>
                    <div
                      class="w-full sm:flex-row"
                    >
                      <div
                        data-testid="TransactionType"
                      >
                        <div
                          data-testid="DetailWrapper"
                        >
                          <div
                            class="border-l-2 border-x-theme-primary-400 bg-theme-secondary-100 px-3 py-2 dark:bg-black sm:border-none sm:bg-transparent sm:p-0 dark:sm:bg-transparent"
                            data-testid="DetailLabel"
                          >
                            <div
                              class="no-ligatures text-md min-w-24 font-semibold leading-5 text-theme-secondary-700 dark:text-theme-secondary-500"
                              data-testid="DetailLabelText"
                            >
                              Transaction Type
                            </div>
                          </div>
                          <div
                            class="w-full break-words rounded-lg border-theme-secondary-300 p-3 dark:border-theme-secondary-800 sm:border sm:px-6 sm:py-5 [.condensed_&]:sm:py-4 mt-0 sm:mt-2"
                          >
                            <div
                              class="space-y-3 sm:space-y-0"
                            >
                              <div
                                class="flex w-full justify-between sm:justify-start"
                              >
                                <div
                                  class="no-ligatures text-md min-w-24 font-semibold leading-5 text-theme-secondary-700 dark:text-theme-secondary-500"
                                  data-testid="DetailLabelText"
                                >
                                  Category
                                </div>
                                <div
                                  class="css-1p04us5"
                                  color="neutral"
                                >
                                  Transfer
                                </div>
                              </div>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                  <div
                    class="group flex"
                  >
                    <div
                      class="hidden sm:ml-3 sm:flex"
                    >
                      <div
                        class="min-w-9 flex-row pr-3"
                      >
                        <div
                          class="-mt-2 h-6 w-full rounded-bl-xl border-b-2 border-l-2 border-theme-secondary-300 dark:border-theme-secondary-800"
                        />
                        <div
                          class="h-[105%] w-full border-l-2 border-theme-secondary-300 group-last:hidden dark:border-theme-secondary-800"
                        />
                      </div>
                    </div>
                    <div
                      class="w-full sm:flex-row"
                    >
                      <div
                        data-testid="DetailWrapper"
                      >
                        <div
                          class="border-l-2 border-x-theme-primary-400 bg-theme-secondary-100 px-3 py-2 dark:bg-black sm:border-none sm:bg-transparent sm:p-0 dark:sm:bg-transparent"
                          data-testid="DetailLabel"
                        >
                          <div
                            class="no-ligatures text-md min-w-24 font-semibold leading-5 text-theme-secondary-700 dark:text-theme-secondary-500"
                            data-testid="DetailLabelText"
                          >
                            Transaction Summary
                          </div>
                        </div>
                        <div
                          class="w-full break-words rounded-lg border-theme-secondary-300 p-3 dark:border-theme-secondary-800 sm:border sm:px-6 sm:py-5 [.condensed_&]:sm:py-4 mt-0 sm:mt-2"
                        >
                          <div
                            class="space-y-3 sm:space-y-0"
                          >
                            <div
                              class="flex w-full justify-between sm:justify-start"
                            >
                              <div
                                class="no-ligatures text-md font-semibold leading-5 text-theme-secondary-700 dark:text-theme-secondary-500 min-w-24"
                                data-testid="DetailLabelText"
                              >
                                Amount
                              </div>
                              <div
                                class="flex h-full items-center justify-center rounded px-1.5 css-xqt0aw"
                                color="danger-bg"
                                data-testid="AmountLabel__wrapper"
                              >
                                <div
                                  class="flex h-full items-center space-x-1"
                                >
                                  <span
                                    class="whitespace-nowrap text-base leading-5"
                                    data-testid="Amount"
                                  >
                                    - 1 DARK
                                  </span>
                                </div>
                              </div>
                            </div>
                            <div
                              class="hidden h-8 w-full items-center sm:flex [.condensed_&]:h-3 [.condensed_&]:leading-3"
                            >
                              <div
                                class="w-full [.condensed_&]:hidden"
                              >
                                <div
                                  class="border-theme-secondary-300 dark:border-theme-secondary-800 css-ppmbkz"
                                  type="horizontal"
                                />
                              </div>
                            </div>
                            <div
                              class="flex w-full justify-between sm:justify-start"
                            >
                              <div
                                class="no-ligatures text-md font-semibold leading-5 text-theme-secondary-700 dark:text-theme-secondary-500 min-w-24"
                                data-testid="DetailLabelText"
                              >
                                Fee
                              </div>
                              <span
                                class="whitespace-nowrap font-semibold leading-5"
                                data-testid="Amount"
                              >
                                0.28629325 DARK
                              </span>
                            </div>
                            <div
                              class="hidden h-8 w-full items-center sm:flex [.condensed_&]:h-3 [.condensed_&]:leading-3"
                            >
                              <div
                                class="w-full [.condensed_&]:hidden"
                              >
                                <div
                                  class="border-theme-secondary-300 dark:border-theme-secondary-800 css-ppmbkz"
                                  type="horizontal"
                                />
                              </div>
                            </div>
                            <div
                              class="flex w-full justify-between sm:justify-start"
                            >
                              <div
                                class="no-ligatures text-md font-semibold leading-5 text-theme-secondary-700 dark:text-theme-secondary-500 min-w-24"
                                data-testid="DetailLabelText"
                              >
                                Value
                              </div>
                              <span
                                class="whitespace-nowrap font-semibold leading-5"
                                data-testid="Amount"
                              >
                                0 BTC
                              </span>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                  <div
                    class="group flex"
                  >
                    <div
                      class="hidden sm:ml-3 sm:flex"
                    >
                      <div
                        class="min-w-9 flex-row pr-3"
                      >
                        <div
                          class="-mt-2 h-6 w-full rounded-bl-xl border-b-2 border-l-2 border-theme-secondary-300 dark:border-theme-secondary-800"
                        />
                        <div
                          class="h-[105%] w-full border-l-2 border-theme-secondary-300 group-last:hidden dark:border-theme-secondary-800"
                        />
                      </div>
                    </div>
                    <div
                      class="w-full sm:flex-row"
                    >
                      <div
                        data-testid="DetailWrapper"
                      >
                        <div
                          class="border-l-2 border-x-theme-primary-400 bg-theme-secondary-100 px-3 py-2 dark:bg-black sm:border-none sm:bg-transparent sm:p-0 dark:sm:bg-transparent"
                          data-testid="DetailLabel"
                        >
                          <div
                            class="no-ligatures text-md min-w-24 font-semibold leading-5 text-theme-secondary-700 dark:text-theme-secondary-500"
                            data-testid="DetailLabelText"
                          >
                            Transaction Details
                          </div>
                        </div>
                        <div
                          class="w-full break-words rounded-lg border-theme-secondary-300 p-3 dark:border-theme-secondary-800 sm:border sm:px-6 sm:py-5 [.condensed_&]:sm:py-4 mt-0 sm:mt-2"
                        >
                          <div
                            class="space-y-3 sm:space-y-0"
                          >
                            <div
                              class="flex w-full justify-between sm:justify-start"
                            >
                              <div
                                class="no-ligatures text-md font-semibold leading-5 text-theme-secondary-700 dark:text-theme-secondary-500 min-w-24"
                                data-testid="DetailLabelText"
                              >
                                Timestamp
                              </div>
                              <div
                                class="font-semibold leading-5"
                              >
                                02.10.2020 12:48 PM
                              </div>
                            </div>
                            <div
                              class="hidden h-8 w-full items-center sm:flex [.condensed_&]:h-3 [.condensed_&]:leading-3"
                            >
                              <div
                                class="w-full [.condensed_&]:hidden"
                              >
                                <div
                                  class="border-theme-secondary-300 dark:border-theme-secondary-800 css-ppmbkz"
                                  type="horizontal"
                                />
                              </div>
                            </div>
                            <div
                              class="flex w-full justify-between sm:justify-start"
                            >
                              <div
                                class="no-ligatures text-md font-semibold leading-5 text-theme-secondary-700 dark:text-theme-secondary-500 min-w-24"
                                data-testid="DetailLabelText"
                              >
                                Block
                              </div>
                              <a
                                class="ring-focus group/inner inline-block h-5 leading-5 css-7nwwrh"
                                data-ring-focus-margin="-m-1"
                                data-testid="Link"
                                href="https://test.arkscan.io/blocks/e6d4760c50419d8665731d3391ba209767f3073d4b2b6661078ff220034d197e"
                                rel="noopener noreferrer"
                              >
                                <span
                                  class="css-bxx244"
                                />
                                <div
                                  class="mb-[3px] shrink-0 align-middle duration-200 css-v0ob3f"
                                  data-testid="Link__external"
                                  height="16"
                                  width="16"
                                >
                                  <svg
                                    id="arrow-external"
                                    viewBox="0 0 20 20"
                                    x="0"
                                    xml:space="preserve"
                                    xmlns="http://www.w3.org/2000/svg"
                                    y="0"
                                  >
                                    <path
                                      d="M18.999 6.43V1h-5.43m5.43 0L7.033 12.966M9.749 4h-7.5c-.625 0-1.25.625-1.25 1.25v12.5c0 .625.625 1.25 1.25 1.25h12.5c.625 0 1.25-.625 1.25-1.25v-7.5"
                                      fill="none"
                                      stroke="currentColor"
                                      stroke-linecap="round"
                                      stroke-linejoin="round"
                                      stroke-width="2"
                                    />
                                  </svg>
                                </div>
                              </a>
                            </div>
                            <div
                              class="hidden h-8 w-full items-center sm:flex [.condensed_&]:h-3 [.condensed_&]:leading-3"
                            >
                              <div
                                class="w-full [.condensed_&]:hidden"
                              >
                                <div
                                  class="border-theme-secondary-300 dark:border-theme-secondary-800 css-ppmbkz"
                                  type="horizontal"
                                />
                              </div>
                            </div>
                            <div
                              class="flex w-full justify-between sm:justify-start"
                            >
                              <div
                                class="no-ligatures text-md font-semibold leading-5 text-theme-secondary-700 dark:text-theme-secondary-500 min-w-24"
                                data-testid="DetailLabelText"
                              >
                                Nonce
                              </div>
                              <div
                                class="font-semibold leading-5"
                              >
                                15
                              </div>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                  <div
                    class="group flex"
                  >
                    <div
                      class="hidden sm:ml-3 sm:flex"
                    >
                      <div
                        class="min-w-9 flex-row pr-3"
                      >
                        <div
                          class="-mt-2 h-6 w-full rounded-bl-xl border-b-2 border-l-2 border-theme-secondary-300 dark:border-theme-secondary-800"
                        />
                        <div
                          class="h-[105%] w-full border-l-2 border-theme-secondary-300 group-last:hidden dark:border-theme-secondary-800"
                        />
                      </div>
                    </div>
                    <div
                      class="w-full sm:flex-row"
                    >
                      <div
                        data-testid="DetailWrapper"
                      >
                        <div
                          class="border-l-2 border-x-theme-primary-400 bg-theme-secondary-100 px-3 py-2 dark:bg-black sm:border-none sm:bg-transparent sm:p-0 dark:sm:bg-transparent"
                          data-testid="DetailLabel"
                        >
                          <div
                            class="no-ligatures text-md min-w-24 font-semibold leading-5 text-theme-secondary-700 dark:text-theme-secondary-500"
                            data-testid="DetailLabelText"
                          >
                            Memo (SmartBridge)
                          </div>
                        </div>
                        <div
                          class="w-full break-words rounded-lg border-theme-secondary-300 p-3 dark:border-theme-secondary-800 sm:border sm:px-6 sm:py-5 [.condensed_&]:sm:py-4 mt-0 sm:mt-2"
                        >
                          <p
                            class="leading-5"
                          >
                            test
                          </p>
                        </div>
                      </div>
                    </div>
                  </div>
                  <div
                    class="group flex"
                  >
                    <div
                      class="hidden sm:ml-3 sm:flex"
                    >
                      <div
                        class="min-w-9 flex-row pr-3"
                      >
                        <div
                          class="-mt-2 h-6 w-full rounded-bl-xl border-b-2 border-l-2 border-theme-secondary-300 dark:border-theme-secondary-800"
                        />
                        <div
                          class="h-[105%] w-full border-l-2 border-theme-secondary-300 group-last:hidden dark:border-theme-secondary-800"
                        />
                      </div>
                    </div>
                    <div
                      class="w-full sm:flex-row"
                    >
                      <div
                        class="border-l-2 border-x-theme-primary-400 bg-theme-secondary-100 px-3 py-2 dark:bg-black sm:border-none sm:bg-transparent sm:p-0 dark:sm:bg-transparent"
                        data-testid="DetailLabel"
                      >
                        <div
                          class="no-ligatures text-md min-w-24 font-semibold leading-5 text-theme-secondary-700 dark:text-theme-secondary-500"
                          data-testid="DetailLabelText"
                        >
                          Confirmations
                        </div>
                      </div>
                      <div
                        class="mt-2"
                      >
                        <div
                          class="mt-3 sm:mt-2"
                        >
                          <div
                            class="flex items-center space-x-3 rounded-xl border border-theme-success-200 bg-theme-success-50 px-3 py-2 dark:border-theme-success-600 dark:bg-transparent max-sm:text-sm sm:px-6 sm:py-4 sm:leading-5"
                            data-testid="TransactionSuccessAlert"
                          >
                            <div
                              class="flex items-center space-x-2 text-theme-success-700"
                            >
                              <div
                                class="h-5 css-1i4b0eq"
                                height="20"
                                width="20"
                              >
                                <svg
                                  fill="none"
                                  viewBox="0 0 20 20"
                                  xmlns="http://www.w3.org/2000/svg"
                                >
                                  <path
                                    d="M17.9984 4.69922L10.3984 14.8992C10.1984 15.0992 9.99844 15.2992 9.69844 15.2992C9.39844 15.2992 9.09844 15.1992 8.89844 14.9992L6.89844 12.9992"
                                    stroke="currentColor"
                                    stroke-linecap="round"
                                    stroke-linejoin="round"
                                    stroke-width="2"
                                  />
                                  <path
                                    d="M2 13.0996L4 15.0996C4.2 15.2996 4.4 15.3996 4.7 15.3996C4.8 15.3996 5 15.3996 5.1 15.2996"
                                    stroke="currentColor"
                                    stroke-linecap="round"
                                    stroke-linejoin="round"
                                    stroke-width="2"
                                  />
                                  <path
                                    d="M12.9969 4.69922L8.79688 10.2992"
                                    stroke="currentColor"
                                    stroke-linecap="round"
                                    stroke-linejoin="round"
                                    stroke-width="2"
                                  />
                                </svg>
                              </div>
                              <p
                                class="font-semibold"
                              >
                                Success
                              </p>
                            </div>
                            <div
                              class="h-5 text-theme-success-200 dark:text-theme-secondary-800 css-1aie31u"
                              type="vertical"
                            />
                            <p
                              class="font-semibold text-theme-secondary-700 dark:text-theme-success-600"
                            >
                              <span>
                                398 Confirmations
                                 
                              </span>
                            </p>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Notifications > should render with transactions in lg 1`] = `
<div>
  <div>
    <div
      aria-controls=":r9:"
      aria-expanded="true"
      aria-haspopup="dialog"
      data-testid="dropdown__toggle"
    >
      <div
        class="group css-c93wvv"
      >
        <button
          class="p-3 relative items-center inline-flex justify-center font-semibold leading-tight text-center transition-colors-shadow duration-100 ease-linear outline-none focus:outline-none focus:ring-2 focus:ring-theme-primary-400 disabled:cursor-not-allowed rounded border-none"
          data-testid="NavigationBar__buttons--notifications"
          type="button"
        >
          <div
            class="flex items-center space-x-2"
          >
            <div
              class="p-1 css-1i4b0eq"
              height="20"
              width="20"
            >
              <svg
                id="bell"
                viewBox="0 0 20 20"
                x="0"
                xml:space="preserve"
                xmlns="http://www.w3.org/2000/svg"
                y="0"
              >
                <g
                  fill="none"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                >
                  <path
                    d="M8.4 17.8c.3.9 1.2 1.4 2.1 1.1.5-.2 1-.6 1.1-1.1M10 2.8V1M10 2.8c3.3 0 6 2.7 6 6h0c0 5.6 1.2 6.6 1.2 6.6H2.8S4 13.9 4 8.8c0-3.3 2.7-6 6-6z"
                  />
                </g>
              </svg>
            </div>
          </div>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Notifications > should render with transactions in md 1`] = `
<div>
  <div>
    <div
      aria-controls=":r6:"
      aria-expanded="true"
      aria-haspopup="dialog"
      data-testid="dropdown__toggle"
    >
      <div
        class="group css-c93wvv"
      >
        <button
          class="p-3 relative items-center inline-flex justify-center font-semibold leading-tight text-center transition-colors-shadow duration-100 ease-linear outline-none focus:outline-none focus:ring-2 focus:ring-theme-primary-400 disabled:cursor-not-allowed rounded border-none"
          data-testid="NavigationBar__buttons--notifications"
          type="button"
        >
          <div
            class="flex items-center space-x-2"
          >
            <div
              class="p-1 css-1i4b0eq"
              height="20"
              width="20"
            >
              <svg
                id="bell"
                viewBox="0 0 20 20"
                x="0"
                xml:space="preserve"
                xmlns="http://www.w3.org/2000/svg"
                y="0"
              >
                <g
                  fill="none"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                >
                  <path
                    d="M8.4 17.8c.3.9 1.2 1.4 2.1 1.1.5-.2 1-.6 1.1-1.1M10 2.8V1M10 2.8c3.3 0 6 2.7 6 6h0c0 5.6 1.2 6.6 1.2 6.6H2.8S4 13.9 4 8.8c0-3.3 2.7-6 6-6z"
                  />
                </g>
              </svg>
            </div>
          </div>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Notifications > should render with transactions in sm 1`] = `
<div>
  <div>
    <div
      aria-controls=":r3:"
      aria-expanded="true"
      aria-haspopup="dialog"
      data-testid="dropdown__toggle"
    >
      <div
        class="group css-c93wvv"
      >
        <button
          class="p-3 relative items-center inline-flex justify-center font-semibold leading-tight text-center transition-colors-shadow duration-100 ease-linear outline-none focus:outline-none focus:ring-2 focus:ring-theme-primary-400 disabled:cursor-not-allowed rounded border-none"
          data-testid="NavigationBar__buttons--notifications"
          type="button"
        >
          <div
            class="flex items-center space-x-2"
          >
            <div
              class="p-1 css-1i4b0eq"
              height="20"
              width="20"
            >
              <svg
                id="bell"
                viewBox="0 0 20 20"
                x="0"
                xml:space="preserve"
                xmlns="http://www.w3.org/2000/svg"
                y="0"
              >
                <g
                  fill="none"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                >
                  <path
                    d="M8.4 17.8c.3.9 1.2 1.4 2.1 1.1.5-.2 1-.6 1.1-1.1M10 2.8V1M10 2.8c3.3 0 6 2.7 6 6h0c0 5.6 1.2 6.6 1.2 6.6H2.8S4 13.9 4 8.8c0-3.3 2.7-6 6-6z"
                  />
                </g>
              </svg>
            </div>
          </div>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Notifications > should render with transactions in xl 1`] = `
<div>
  <div>
    <div
      aria-controls=":rc:"
      aria-expanded="true"
      aria-haspopup="dialog"
      data-testid="dropdown__toggle"
    >
      <div
        class="group css-c93wvv"
      >
        <button
          class="p-3 relative items-center inline-flex justify-center font-semibold leading-tight text-center transition-colors-shadow duration-100 ease-linear outline-none focus:outline-none focus:ring-2 focus:ring-theme-primary-400 disabled:cursor-not-allowed rounded border-none"
          data-testid="NavigationBar__buttons--notifications"
          type="button"
        >
          <div
            class="flex items-center space-x-2"
          >
            <div
              class="p-1 css-1i4b0eq"
              height="20"
              width="20"
            >
              <svg
                id="bell"
                viewBox="0 0 20 20"
                x="0"
                xml:space="preserve"
                xmlns="http://www.w3.org/2000/svg"
                y="0"
              >
                <g
                  fill="none"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                >
                  <path
                    d="M8.4 17.8c.3.9 1.2 1.4 2.1 1.1.5-.2 1-.6 1.1-1.1M10 2.8V1M10 2.8c3.3 0 6 2.7 6 6h0c0 5.6 1.2 6.6 1.2 6.6H2.8S4 13.9 4 8.8c0-3.3 2.7-6 6-6z"
                  />
                </g>
              </svg>
            </div>
          </div>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Notifications > should render with transactions in xs 1`] = `
<div>
  <div>
    <div
      aria-controls=":r0:"
      aria-expanded="true"
      aria-haspopup="dialog"
      data-testid="dropdown__toggle"
    >
      <div
        class="group css-c93wvv"
      >
        <button
          class="p-3 relative items-center inline-flex justify-center font-semibold leading-tight text-center transition-colors-shadow duration-100 ease-linear outline-none focus:outline-none focus:ring-2 focus:ring-theme-primary-400 disabled:cursor-not-allowed rounded border-none"
          data-testid="NavigationBar__buttons--notifications"
          type="button"
        >
          <div
            class="flex items-center space-x-2"
          >
            <div
              class="p-1 css-1i4b0eq"
              height="20"
              width="20"
            >
              <svg
                id="bell"
                viewBox="0 0 20 20"
                x="0"
                xml:space="preserve"
                xmlns="http://www.w3.org/2000/svg"
                y="0"
              >
                <g
                  fill="none"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                >
                  <path
                    d="M8.4 17.8c.3.9 1.2 1.4 2.1 1.1.5-.2 1-.6 1.1-1.1M10 2.8V1M10 2.8c3.3 0 6 2.7 6 6h0c0 5.6 1.2 6.6 1.2 6.6H2.8S4 13.9 4 8.8c0-3.3 2.7-6 6-6z"
                  />
                </g>
              </svg>
            </div>
            <div
              class="absolute right-1 top-1 flex items-center justify-center rounded-full bg-theme-background p-1 transition-all duration-100 ease-linear group-hover:bg-theme-primary-100 dark:group-hover:bg-theme-secondary-800"
            >
              <div
                class="h-2 w-2 rounded-full bg-theme-danger-500"
              />
            </div>
          </div>
        </button>
      </div>
    </div>
  </div>
</div>
`;
